@@ -140,9 +140,15 @@ struct RequestTimeScale {
 };
 
 DECLARE_HISTOGRAM(arangodb_client_connection_statistics_bytes_received,
-                  BytesReceivedScale, "Bytes received for a request");
+                  BytesReceivedScale, "Bytes received for requests");
 DECLARE_HISTOGRAM(arangodb_client_connection_statistics_bytes_sent,
-                  BytesSentScale, "Bytes sent for a request");
+                  BytesSentScale, "Bytes sent for responses");
+DECLARE_HISTOGRAM(arangodb_client_user_connection_statistics_bytes_received,
+                  BytesReceivedScale,
+                  "Bytes received for requests, only user traffic");
+DECLARE_HISTOGRAM(arangodb_client_user_connection_statistics_bytes_sent,
+                  BytesSentScale,
+                  "Bytes sent for responses, only user traffic");
 DECLARE_COUNTER(
     arangodb_process_statistics_minor_page_faults_total,
     "The number of minor faults the process has made which have not required "
@@ -249,10 +255,16 @@ auto const statStrings = std::map<std::string_view,
                                   std::vector<std::string_view>>{
     {"bytesReceived",
      {"arangodb_client_connection_statistics_bytes_received", "histogram",
-      "Bytes received for a request"}},
+      "Bytes received for requests"}},
     {"bytesSent",
      {"arangodb_client_connection_statistics_bytes_sent", "histogram",
-      "Bytes sent for a request"}},
+      "Bytes sent for responses"}},
+    {"bytesReceivedUser",
+     {"arangodb_client_user_connection_statistics_bytes_received", "histogram",
+      "Bytes received for requests, only user traffic"}},
+    {"bytesSentUser",
+     {"arangodb_client_user_connection_statistics_bytes_sent", "histogram",
+      "Bytes sent for responses, only user traffic"}},
     {"minorPageFaults",
      {"arangodb_process_statistics_minor_page_faults_total", "counter",
       "The number of minor faults the process has made which have not required "
@@ -437,6 +449,10 @@ auto const statBuilder = makeStatBuilder({
     {"bytesReceived",
      new arangodb_client_connection_statistics_bytes_received()},
     {"bytesSent", new arangodb_client_connection_statistics_bytes_sent()},
+    {"bytesReceivedUser",
+     new arangodb_client_user_connection_statistics_bytes_received()},
+    {"bytesSentUser",
+     new arangodb_client_user_connection_statistics_bytes_sent()},
     {"minorPageFaults",
      new arangodb_process_statistics_minor_page_faults_total()},
     {"majorPageFaults",
@@ -928,6 +944,14 @@ void StatisticsFeature::toPrometheus(std::string& result, double const& now) {
     appendHistogram(result, requestStats.bytesSent, "bytesSent",
                     {"250", "1000", "2000", "5000", "10000", "+Inf"}, true);
     appendHistogram(result, requestStats.bytesReceived, "bytesReceived",
+                    {"250", "1000", "2000", "5000", "10000", "+Inf"}, true);
+
+    RequestStatistics::Snapshot requestStatsUser;
+    RequestStatistics::getSnapshot(requestStatsUser,
+                                   stats::RequestStatisticsSource::USER);
+    appendHistogram(result, requestStatsUser.bytesSent, "bytesSentUser",
+                    {"250", "1000", "2000", "5000", "10000", "+Inf"}, true);
+    appendHistogram(result, requestStatsUser.bytesReceived, "bytesReceivedUser",
                     {"250", "1000", "2000", "5000", "10000", "+Inf"}, true);
 
     // _httpStatistics()
